tests/e2e/semantics/readonly_if3.error
Error: syntax error in story at line 6, column 5

6|        b[1] = 2
          ^^^^^^

E0127: `b[]` is readonly and can not be assigned to.
