tests/e2e/semantics/readonly_if3.story
# FEAT: globals=False
if true
    a = 1
else if true
    b = [1, 2, 3]
    b[1] = 2
